--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-    <button onclick="explainer()">Start</button>
+    
+    <h1>Battle Ship</h1>
+    <button onclick="play()">Start</button>
     
 <script>
+
+function play() {
 
 explainer();
 
@@ -65,6 +68,7 @@ function playGame() {
     }
 }
 
+}
 </script>
 
 </body>
