--- a/index.html
+++ b/index.html
@@ -1,75 +1,104 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <style>
+        body {
+            background: #0174DF;
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        button {
+            background-color: #1324D1;
+            border: none;
+            color: white;
+            margin: auto;
+            display: block;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            font-size: 16px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+
 <body>
-    
+
     <h1>Battle Ship</h1>
     <button onclick="play()">Start</button>
-    
-<script>
 
-function play() {
+    <script>
 
-explainer();
+        function play() {
 
-let boats = getRandomNumber(0, 8);
-let misses = 0;
-let score = 0;
-let number = 0;
-let previousNumbers = [];
-let hit = 0;
+            explainer();
 
-while (misses < 3 && score < 3) {
-    getInput();
-    playGame();
-}
+            var data = {
+                boats: getRandomNumber(0, 8),
+                misses: 0,
+                score: 0,
+                number: 0,
+                previousNumbers: [],
+                hit: 0,
+            }
 
-if (score == 3) {
-    alert("Game over! You Won.\nMisses: " + misses + "\nScores: " + score);
-} else {
-    alert("Game over! You Lost.\nMisses: " + misses + "\nScores: " + score);
-}
+            while (data.misses < 3 && data.score < 3) {
+                getInput();
+                playGame();
+            }
 
-function explainer() {
-    alert("Explanation Sea Battle:\nGiven three boats hiding in the water on places 0 to 7. Each boat is in a seperate number. Guess where the boats are by entering a number ranging from 0 - 7. If you find all the boats, before you miss three times, you win the game!");
-}
+            if (data.score == 3) {
+                alert("Game over! You Won.\nMisses: " + data.misses + "\nScores: " + data.score);
+            } else {
+                alert("Game over! You Lost.\nMisses: " + data.misses + "\nScores: " + data.score);
+            }
 
-function getRandomNumber(min, max) {
-    let n = [];
-    let t;
-    while (n.length < 3) {
-        t = Math.floor(Math.random() * max) + min;
-        if (t != n[0] && t != n[1]) {
-            n.push(t);
+            function explainer() {
+                alert("Explanation Sea Battle:\nGiven three boats hiding in the water on places 0 to 7. Each boat is in a seperate number. Guess where the boats are by entering a number ranging from 0 - 7. If you find all the boats, before you miss three times, you win the game!");
+            }
+
+            function getRandomNumber(min, max) {
+                let n = [];
+                let t;
+                while (n.length < 3) {
+                    t = Math.floor(Math.random() * max) + min;
+                    if (t != n[0] && t != n[1]) {
+                        n.push(t);
+                    }
+                }
+                return n;
+            }
+
+            function getInput() {
+                data.number = parseInt(prompt("Pick a number (0 - 7) to sink the boat"));
+                if (isNaN(data.number) == true || data.number > 7) {
+                    alert("Please enter a number between 0 and 7");
+                    getInput();
+                }
+                if (data.previousNumbers.indexOf(data.number) != -1) {
+                    alert("You already checked the water here");
+                    getInput();
+                }
+            }
+
+            function playGame() {
+                data.previousNumbers.push(data.number);
+                if (data.boats.indexOf(data.number) != -1) {
+                    alert("You sunk one boat. Well done!");
+                    data.score++;
+                } else {
+                    data.misses++;
+                    alert("Miss!");
+                }
+            }
+
         }
-    }
-    return n;
-}
-
-function getInput() {
-    number = parseInt(prompt("Pick a number (0 - 7) to sink the boat"));
-    if (isNaN(number) == true || number > 7) {
-        alert("Please enter a number between 0 and 7");
-        getInput();
-    }
-    if (previousNumbers.indexOf(number) != -1) {
-        alert("You already checked the water here");
-        getInput();
-    }
-}
-
-function playGame() {
-    previousNumbers.push(number);
-    if (boats.indexOf(number) != -1) {
-        alert("You sunk one boat. Well done!");
-        score++;
-    } else {
-        misses++;
-        alert("Miss!");
-    }
-}
-
-}
-</script>
+    </script>
 
 </body>
+
 </html>
