Remove JS from HTML file

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h1>Battle Ship</h1>
     <button onclick="play()">Start</button>
 
-    <script src="battelship.js"></script>
+    <script src="battleship.js"></script>
 
 </body>
 
